src/test/ui/rfc-2093-infer-outlives/self-structs.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, 'b, T> { //~ ERROR dustc_outlives
    field1: dyn Bar<'a, 'b, T>
}

trait Bar<'x, 's, U>
    where U: 'x,
    Self:'s
{}

fn main() {}
